# wlstem

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
client/: meson.build  pool-buffer.c
common/: cairo.c  list.c  log.c  meson.build  pango.c  stringop.c  util.c
include/: ipc.h  log.h  loop.h  pool-buffer.h  server_arrange.h  server_wm.h  sway_arrange.h  sway_config.h  sway_cursor.h  sway_decoration.h  sway_idle_inhibit_v1.h  sway_input-manager.h  sway_keyboard.h  sway_libinput.h  sway_seat.h  sway_server.h  sway_surface.h  sway_switch.h  sway_tablet.h  sway_text_input.h  sway_view.h  sway_xwayland.h  util.h  window_title.h  wlstem.h
include/sway/: commands.h  config.h  criteria.h  cursor.h  desktop.h  idle_inhibit_v1.h  input-manager.h  ipc-json.h  ipc-server.h  keyboard.h  layers.h  libinput.h  output.h  output_config.h  seat.h  server.h  sway_config.h  switch.h  text_input.h  view.h  xdg_decoration.h
include/sway/desktop/: transaction.h
include/sway/input/: cursor.h  input-manager.h  keyboard.h  seat.h  switch.h  tablet.h  text_input.h
include/sway/tree/: arrange.h  container.h  node.h  root.h  view.h  workspace.h
mod_sway/: arrange.c  bindkey.c  commands.c  config.c  container.c  criteria.c  decoration.c  exec.c  ipc-json.c  main.c  meson.build  output.c  server.c  view.c  window_title.c  wlstem.c  wm.c  xdg_decoration.c
mod_sway/commands/: bind.c  exec.c  exec_always.c  focus.c  gaps.c  input.c  mode.c  move.c  new_window.c  output.c  reload.c  rename.c  seat.c  workspace.c  xwayland.c
mod_sway/commands/input/: events.c  xkb_file.c  xkb_switch_layout.c
mod_sway/commands/output/: background.c
mod_sway/commands/seat/: cursor.c  pointer_constraint.c
mod_sway/config/: input.c  output.c  seat.c
mod_sway/desktop/: desktop.c  idle_inhibit_v1.c  layer_shell.c  output.c  render.c  surface.c  transaction.c  xdg_shell.c  xwayland.c
mod_sway/input/: cursor.c  input-manager.c  keyboard.c  libinput.c  seat.c  seatop_default.c  seatop_down.c  seatop_move_tiling.c  seatop_resize_tiling.c  switch.c  tablet.c  text_input.c
mod_sway/tree/: arrange.c  container.c  node.c  output.c  root.c  view.c  workspace.c
protocols/: meson.build
sway/: commands.c  config.c  ipc-server.c  main.c  meson.build  server.c  xdg_decoration.c
sway/commands/: bind.c  force_focus_wrapping.c  include.c  new_float.c  reload.c
sway/commands/output/: background.c
sway/config/: input.c  output.c
sway/desktop/: desktop.c  idle_inhibit_v1.c  output.c  render.c  transaction.c  xdg_shell.c  xwayland.c
sway/input/: keyboard.c  libinput.c  seatop_default.c  switch.c  tablet.c
sway/tree/: arrange.c  output.c
wlstem/: at.c  damage.c  foreach.c  idle_inhibit_v1.c  input_method.c  loop.c  meson.build  misc_protocols.c  node.c  output.c  output_config.c  output_handlers.c  output_manager.c  render.c  root.c  seat.c  server.c  surface.c  tablet.c  text_input.c  transaction.c  user_callbacks.c  view.c  window.c  wlstem.c
wlstem/include/: cairo.h  container.h  cursor.h  damage.h  foreach.h  idle.h  idle_inhibit_v1.h  input_config.h  input_manager.h  input_method.h  layers.h  list.h  misc_protocols.h  node.h  output.h  output_config.h  output_manager.h  pango.h  render.h  root.h  seat.h  server.h  surface.h  tablet.h  text_input.h  transaction.h  user_callbacks.h  util.h  view.h  window.h  wlstem.h
wlstem/input/: cursor.c  seat.c
wlstem/output/: output.c  output_handlers.c
wlstem/render/: damage.c  render.c
wlstem/transaction/: transaction.c
wlstem/util/: foreach.c
